[package]
edition = "2021"
license = "MIT"
name = "ngs"
publish = true
description = "Command line tool for processing next-generation sequencing data."
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.12"
flate2 = "1.0.23"
futures = "0.3.21"
git-testament = "0.2.1"
indicatif = "0.16.2"
noodles-bam = {version = "0.18.0", features = ["async"]}
noodles-bgzf = {version = "0.11.0", features = ["libdeflate"]}
noodles-core = "0.6.0"
noodles-fasta = "0.10.0"
noodles-fastq = "0.5.0"
noodles-sam = "0.15.0"
rand = "0.8.5"
regex = "1.5.5"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.18.0"}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[profile.release]
debug = true
