[package]
edition = "2021"
license = "MIT"
name = "ngs"
publish = true
description = "Command line tool for processing next-generation sequencing data."
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = "3.1.12"
flate2 = "1.0.23"
futures = "0.3.21"
git-testament = "0.2.1"
indicatif = "0.16.2"
itertools = "0.10.5"
noodles-bam = { version = "0.21.0", features = ["async"] }
noodles-bgzf = { version = "0.14.0", features = ["libdeflate"] }
noodles-core = "0.8.0"
noodles-fasta = "0.13.0"
noodles-fastq = "0.5.0"
noodles-gff = "0.7.0"
noodles-sam = "0.18.0"
num-format = "0.4.0"
plotly = "0.8.1"
prettytable-rs = "0.9.0"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.5.5"
rust-lapper = "1.0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.0", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[profile.release]
debug = true
