[package]
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
edition = "2021"
license = "MIT"
name = "ngs"
publish = true
description = "Command line tool for processing next-generation sequencing data."
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["cargo", "derive", "string"] }
flate2 = "1.0.23"
futures = "0.3.21"
git-testament = "0.2.1"
indexmap = "1.9.1"
indicatif = "0.16.2"
itertools = "0.10.5"
noodles = { version = "0.27.0", features = [
    "bam",
    "bgzf",
    "csi",
    "core",
    "fasta",
    "fastq",
    "gff",
    "sam",
    "cram",
] }
num-format = "0.4.0"
plotly = "0.8.1"
prettytable-rs = "0.9.0"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.5.5"
rust-lapper = "1.0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
tokio = { version = "1.18.0", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[profile.release]
debug = true
